--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,20 @@
         "php": "^7.0.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.11",
+        "doctrine/orm": "^2.6",
+        "sensio/distribution-bundle": "^5.0",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "3.4.*",
-        "symfony/yaml": "3.4.*"
+        "symfony/yaml": "3.4.*",
+        "twig/twig": "^2.12"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.4",
+        "sensio/generator-bundle": "^3.1",
+        "symfony/phpunit-bridge": "^4.3"
     },
     "config": {
         "preferred-install": {
@@ -39,7 +46,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
