--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
         "sensio/distribution-bundle": "^5.0",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
@@ -18,7 +19,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.4",
         "sensio/generator-bundle": "^3.1",
-        "symfony/phpunit-bridge": "^4.3"
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
