--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=1e253e6227f60a987e00158bef572ad3
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/sqlite.db
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/data.sqlite
 ###< doctrine/doctrine-bundle ###
