--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "3.4.*",
         "symfony/framework-bundle": "3.4.*",
         "symfony/yaml": "3.4.*",
         "twig/twig": "^2.12"
