--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "3.4.*",
         "symfony/framework-bundle": "3.4.*",
+        "symfony/validator": "3.4.*",
         "symfony/yaml": "3.4.*",
         "twig/twig": "^2.12",
         "twitter/bootstrap": "^4.3"
