--- a/.env
+++ b/.env
@@ -27,3 +27,10 @@ APP_SECRET=1e253e6227f60a987e00158bef572ad3
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/data.sqlite
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
