--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
+        "friendsofsymfony/user-bundle": "^2.1",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "4",
         "stof/doctrine-extensions-bundle": "^1.3",
@@ -17,6 +18,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "3.4.*",
         "symfony/framework-bundle": "3.4.*",
+        "symfony/swiftmailer-bundle": "^3.3",
         "symfony/validator": "3.4.*",
         "symfony/yaml": "3.4.*",
         "twig/twig": "^2.12",
