--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/asset": "3.4.*",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
+        "symfony/event-dispatcher": "3.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "3.4.*",
         "symfony/framework-bundle": "3.4.*",
